--- a/Computing_Assignment_VII/group_USER/assign_7_USER.Rmd
+++ b/Computing_Assignment_VII/group_USER/assign_7_USER.Rmd
@@ -6,8 +6,37 @@ output: slidy_presentation
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE)
 ```
 
-## your document
+## Replication of Robert and Schlenker
+```{r IV and OLS}
+library(tidyverse)
+#install.packages("AER")
+library(AER)
+library(knitr)
+rm(list=ls())
+
+data.all = read.csv("C:/Users/tluo/Downloads/RSdata.csv")  # Location of downloaded dataset
+RSdata.ext = data.all %>% mutate(lag_ln_w=lag(ln_w), ln_area=log(area)) %>% filter(year>=1962)
+RSdata = filter(RSdata.ext, year<=2007)
+
+# OLS #
+OLS1 = lm(ln_qs ~ ln_fp + trendsp1 + trendsp2 + trendsp3, data=RSdata)
+OLS2 = lm(ln_qd ~ ln_sp + trendsp1 + trendsp2 + trendsp3, data=RSdata)
+# IV #
+iv1 = ivreg(ln_qs ~ ln_fp + trendsp1 + trendsp2 + trendsp3 |
+                 lag_ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata)
+iv2 = ivreg(ln_qd ~ ln_sp + trendsp1 + trendsp2 + trendsp3 |
+                     ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata)
+
+# OLS results #
+kable(rbind(ln_fp = summary(OLS1)$coef["ln_fp",1:2], ln_sp = summary(OLS2)$coef["ln_sp",1:2]), digits = 3, caption="OLS Estimates")
+# IV results #
+kable(rbind(ln_fp = summary(iv1)$coef["ln_fp",1:2], ln_sp = summary(iv2)$coef["ln_sp",1:2]), digits = 3, caption="IV Estimates")
+
+```
+
+The estimates do not match exact to the results of the paper, but in the same ball park, and general results are consistent.
+
 
