First test commit

--- a/Computing_Assignment_VII/group_Clustered_Errors/assign_7_Clustered_Errors.Rmd
+++ b/Computing_Assignment_VII/group_Clustered_Errors/assign_7_Clustered_Errors.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Computing Assignment VII"
-author: "group"
+author: "Clustered Errors"
 date: "March 9, 2018"
 output: pdf_document
 ---
