--- a/Computing_Assignment_VII/group_Clustered_Errors/assign_7_Clustered_Errors.Rmd
+++ b/Computing_Assignment_VII/group_Clustered_Errors/assign_7_Clustered_Errors.Rmd
@@ -31,6 +31,31 @@ summary(IV_sup)
 summary(IV_dmd)
 ```
 
+```{r hausman_test}
+sup_coef_ols_w <- coef(OLS_sup_w)["ln_fp"]
+sup_coef_ols_now <- coef(OLS_sup_now)["ln_fp"]
+sup_coef_IV <- coef(IV_sup)["ln_fp"]
+
+sup_var_ols_w <- (summary(OLS_sup_w)$coefficients[2,2])^2
+sup_var_ols_now <- (summary(OLS_sup_now)$coefficients[2,2])^2
+sup_var_IV <- (summary(IV_sup)$coefficients[2,2])^2
+var_hausman_w <- sup_var_ols_w + sup_var_IV
+var_hausman_now <- sup_var_ols_now + sup_var_IV
+
+hausman_w <- ((sup_coef_IV - sup_coef_ols_w)^2)/var_hausman_w
+hausman_now <- ((sup_coef_IV - sup_coef_ols_now)^2)/var_hausman_now
+
+names(hausman_w) <- "haus_w"
+names(hausman_now) <- "haus_now"
+
+hausman_w
+hausman_now
+
+pchisq(hausman_w, df = 1)
+pchisq(hausman_now, df = 1)
+```
+
+
 ## Comparison to Table 4
 In our initial model, including the ln_w variable, we find an estimated supply elasticity of 0.089 and a demand elasticity of -0.017. Our supply elasticity is far away from the RS point estimate, however they are both inelastic. The demand elasticity is fairly close to the RS point estimate. 
 
@@ -39,9 +64,10 @@ After removing ln_w from the supply model, we find a new supply elasticity of 0.
 ## Comparison to Table 1
 Using the IV regressions, we find a supply elasticity of 0.060 and a demand elasticity of -0.063. Again, the supply elasticity is not close to the point estimate in Table 1, but it is still inelastic (though the value presented in the Table is much closer to unit elastic). The demand elasticity is very close to the estimate from the paper. 
 
-
 ## Hausman test
+We calculate a Hausman statistic comparing the coefficient from the supply regression with ln_w to the IV regression of 0.295. This provides evidence that we cannot reject the null hypothesis that the coefficients are the same between the two regressions.
 
+Similarly, we find a Hausman statistic of 0.144 in comparing the coefficient from the supply regression without ln_w to the IV regression. This also leads us to fail to reject the null hypothesis.
 
 ## Supply Elasticity
 
