--- a/Computing_Assignment_VII/group_The_Franciscans/assign_7_The_Franciscans.Rmd
+++ b/Computing_Assignment_VII/group_The_Franciscans/assign_7_The_Franciscans.Rmd
@@ -45,6 +45,9 @@ IV_supply <- ivreg(ln_qs ~ ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3 | lag(l
 summary(IV_supply)
   # Coefficient same sign and similar magnitude, standard error also similar (0.101652)
 
+IV_supply_exclw <- ivreg(ln_qs ~ ln_fp + trendsp1 + trendsp2 + trendsp3 | lag(ln_w) + ln_w + trendsp1 + trendsp2 + trendsp3, data=data_RS)
+summary(IV_supply_exclw)
+
 IV_demand <- ivreg(ln_qd ~ ln_sp + trendsp1 + trendsp2 + trendsp3 | ln_w + trendsp1 + trendsp2 + trendsp3, data=data_RS)
 summary(IV_demand)
   # Coefficient on ln_sup same sign, similar magnitude, similar standard error
@@ -59,8 +62,8 @@ Hs = t(beta_diff) %*% Ginv(cov_diff) %*% beta_diff
 Hs
 
 # model excluding ln_w -- how do we do this when the matrices are different sizes?? 
-beta_diff_exclw <- coefficients(OLS_supply_exclw) - coefficients(IV_supply)
-cov_diff_exclw <- vcov(IV_supply) - vcov(OLS_supply_exclw)
+beta_diff_exclw <- coefficients(OLS_supply_exclw) - coefficients(IV_supply_exclw)
+cov_diff_exclw <- vcov(IV_supply_exclw) - vcov(OLS_supply_exclw)
 Hs_exclw = t(beta_diff_exclw) %*% Ginv(cov_diff_exclw) %*% beta_diff_exclw
 Hs_exclw
 ```
@@ -74,3 +77,4 @@ IV_supply_area <- ivreg(ln_area~ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3 | 
 summary(IV_supply_area)
 ```
 
+## 5., 6. Comments about canvas vs. RS dataset
