--- a/Computing_Assignment_VII/group_USER/assign_7_USER.Rmd
+++ b/Computing_Assignment_VII/group_USER/assign_7_USER.Rmd
@@ -12,12 +12,13 @@ knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE)
 ## Replication of Robert and Schlenker
 ```{r IV and OLS}
 library(tidyverse)
-#install.packages("AER")
+# install.packages("AER")
 library(AER)
 library(knitr)
 rm(list=ls())
 
-data.all = read.csv("C:/Users/tluo/Downloads/RSdata.csv")  # Location of downloaded dataset
+data.all = read.csv("E:/tengda/PhD/courses/winter quarter 2018/Econometrics I/homework/RSdata.csv")  # Location of downloaded dataset
+# Can we obtain the data using TA's method?
 RSdata.ext = data.all %>% mutate(lag_ln_w=lag(ln_w), ln_area=log(area)) %>% filter(year>=1962)
 RSdata = filter(RSdata.ext, year<=2007)
 
@@ -25,26 +26,29 @@ RSdata = filter(RSdata.ext, year<=2007)
 OLS1 = lm(ln_qs ~ ln_fp + trendsp1 + trendsp2 + trendsp3, data=RSdata)
 OLS2 = lm(ln_qd ~ ln_sp + trendsp1 + trendsp2 + trendsp3, data=RSdata)
 # IV #
-iv1 = ivreg(ln_qs ~ ln_fp + trendsp1 + trendsp2 + trendsp3 |
-                 lag_ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata)
+iv1 = ivreg(ln_qs ~ ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3 |
+                    ln_w + lag_ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata)
+                    # include ln_w in both equations
 iv2 = ivreg(ln_qd ~ ln_sp + trendsp1 + trendsp2 + trendsp3 |
-                     ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata)
+                    ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata)
 
 # OLS results #
-kable(rbind(ln_fp = summary(OLS1)$coef["ln_fp",1:2], ln_sp = summary(OLS2)$coef["ln_sp",1:2]), digits = 3, caption="Table 1a. OLS Estimates")
+kable(rbind(ln_fp = summary(OLS1)$coef["ln_fp",-3], ln_sp = summary(OLS2)$coef["ln_sp",-3]), digits = 3, caption="Table 1a. OLS Estimates")
 # IV results #
-kable(rbind(ln_fp = summary(iv1)$coef["ln_fp",1:2], ln_sp = summary(iv2)$coef["ln_sp",1:2]), digits = 3, caption="Table 1b. IV Estimates")
+kable(rbind(ln_fp = summary(iv1)$coef["ln_fp",-3], ln_sp = summary(iv2)$coef["ln_sp",-3]), digits = 3, caption="Table 1b. IV Estimates")
 
 ```
 
-The estimates do not match exact to the results of the paper, but in the same ball park, and general results are consistent.
+(1) The estimates do not match exact to the results of the paper since our data of ln_w is a little bit different from RS's. However, they are compatible with RS's results in terms of magnitudes and signs as well as significances.  
+(2) Our OLS model results of the supply side indicates that RS may exclude ln_w in their corresponding OLS model.  
 
 ## Hausman Test p-value
 ```{r Hausman}
 ## Hausman Test ##
-kable(data.frame(supply = summary(iv1, diagnostics = T)$diagnostics["Wu-Hausman","p-value"],
-           demand = summary(iv2, diagnostics = T)$diagnostics["Wu-Hausman","p-value"]),
-      digits=3, caption = "Table 2. Using diagnostics")
+#kable(data.frame(supply = summary(iv1, diagnostics = T)$diagnostics["Wu-Hausman","p-value"],
+#           demand = summary(iv2, diagnostics = T)$diagnostics["Wu-Hausman","p-value"]),
+#      digits=3, caption = "Table 2. Using diagnostics")
+#not needed and not compatibile since we don't know whether the OLS used excludes ln_w or not.
 
 ## Hausman Test- Manual ##
 # Supply
@@ -61,21 +65,25 @@ Difference between OLS and IV not significant for demand equation but signfician
 
 ## Supply elasticity for Area
 ```{r Area}
-iv3 = ivreg(ln_area ~ ln_fp + trendsp1 + trendsp2 + trendsp3 |
-              lag_ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata)
-kable(data.frame(elasticity=summary(iv3)$coef["ln_fp",1:2]), digits=3, caption = "Table 3. Supply elasticity for Area")
+iv3 = ivreg(ln_area ~ ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3 |
+            ln_w + lag_ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata)
+kable(data.frame(supply.elasticity=summary(iv3)$coef["ln_fp",-3]), digits=3, caption = "Table 3. Supply elasticity for Area")
 ```
 
-Supply elasticity for area slightly higher than that for total quantity, but are comparable.
+The supply elasticity for area is slightly lower than that for total quantity, but are comparable in terms of magnitude and sign as well as significance.  
 
 ## Additional years of data
 ```{r ext}
-iv1b = ivreg(ln_qs ~ ln_fp + trendsp1 + trendsp2 + trendsp3 | lag_ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata.ext)
-iv2b = ivreg(ln_qd ~ ln_sp + trendsp1 + trendsp2 + trendsp3 | ln_w     + trendsp1 + trendsp2 + trendsp3, data=RSdata.ext)
-kable(rbind(ln_fp = summary(iv1b)$coef["ln_fp",1:2], ln_sp = summary(iv2b)$coef["ln_sp",1:2]), digitis = 3, caption = "Table 4. Additional 7 years of recent data")
+iv1b = ivreg(ln_qs ~ ln_fp + ln_w + trendsp1 + trendsp2 + trendsp3 | ln_w +     
+             lag_ln_w + trendsp1 + trendsp2 + trendsp3, data=RSdata.ext)
+iv2b = ivreg(ln_qd ~ ln_sp + trendsp1 + trendsp2 + trendsp3 | ln_w + 
+             trendsp1 + trendsp2 + trendsp3, data=RSdata.ext)
+
+kable(data.frame(ln_fp = summary(iv1b)$coef["ln_fp",-3], ln_sp = summary(iv2b)$coef["ln_sp",-3]), digitis = 3, caption = "Table 4. Additional 7 years of recent data")
+
 ```
 
-Estimates are different but arguably not very different and does not change the main results
+Estimates have the same signs as before with only slight differences in terms of magnitudes and significances.  
 
 ## Comments on original datasets
 The orginal datasets and code are provided by the authors in a modular fashion. The authors could have organized the data in a single dataset and provided the code in only one file with indicated sections, which would have made replicating the results a bit easier. But on the other hand, compared to many other authors who provide data and code with little explaination, theirs is relatively complete. 
